add top video asist button and make it work

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 <body>
 
   <div class="wrapper">
-    <div class="page-title-wrapper">
-      <img class="swift-logo" src="https://swaggerdemo.file.force.com/servlet/servlet.ImageServer?id=0155e000001wbZt&oid=00D5e000004gC8f&lastMod=1648816309000" alt="Swift Logo">
-      <h1 class="page-title">New Pre-Call Plan</h1>
+    <div class="d-flex justify-between items-center">
+      <div class="page-title-wrapper">
+        <img class="swift-logo" src="https://swaggerdemo.file.force.com/servlet/servlet.ImageServer?id=0155e000001wbZt&oid=00D5e000004gC8f&lastMod=1648816309000" alt="Swift Logo">
+        <h1 class="page-title">New Pre-Call Plan</h1>
+      </div>
+      <div>
+        <button class="btn grey" onclick="on()">ASSIST</button>
+      </div>
+      <div class="overlay" onclick="off()">
+        <iframe src="https://player.vimeo.com/video/809829380?h=8fe947ad9f" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+
     </div>
     <section class="pcp-section orange-section">
       <div class="section-title" bgcolor="#EF5A2A" style="background: #EF5A2A;">
