add videos to all asisst buttons

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <h1 class="page-title">New Pre-Call Plan</h1>
       </div>
       <div>
-        <button class="btn grey" onclick="on()">ASSIST</button>
+        <button class="btn grey overlay-trigger" type="button" value="overlay-one">ASSIST</button>
+        <div class="overlay" id="overlay-one">
+          <iframe src="https://player.vimeo.com/video/820953292?h=f0457235b3" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+          
+        </div>
       </div>
-      <div class="overlay" onclick="off()">
-        <iframe src="https://player.vimeo.com/video/809829380?h=8fe947ad9f" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-      </div>
+      
 
     </div>
     <section class="pcp-section orange-section">
@@ -35,7 +37,10 @@
       <div class="section-content">
           <div class="d-flex justify-between">
             <h3>Account context</h3>
-            <button class="btn orange">ASSIST</button>
+            <button class="btn orange overlay-trigger" type="button" value="overlay-two">ASSIST</button>
+            <div class="overlay" id="overlay-two">
+              <iframe src="https://player.vimeo.com/video/809829380?h=8fe947ad9f" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
           </div>
           <div class="lines">
             <div class="line long-line"></div>
@@ -60,7 +65,10 @@
             <div class="w-50 pr-1">
               <div class="d-flex justify-between">
                 <h3>Meeting with</h3>
-                <button class="btn orange">ASSIST</button>
+                <button class="btn orange overlay-trigger" type="button" value="overlay-three">ASSIST</button>
+                <div class="overlay" id="overlay-three">
+                  <iframe src="https://player.vimeo.com/video/809829435?h=230603999e" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
               </div>
               <div class="lines">
                 <div class="line long-line"></div>
@@ -79,7 +87,10 @@
             <div class="w-50 pl-1">
               <div class="d-flex justify-between">
                 <h3>Our team and roles</h3>
-                <button class="btn orange">ASSIST</button>
+                <button class="btn orange overlay-trigger" type="button" value="overlay-four">ASSIST</button>
+                <div class="overlay" id="overlay-four">
+                  <iframe src="https://player.vimeo.com/video/809829465?h=8a5eccaa44" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
               </div>
               <div class="lines">
                 <div class="line long-line"></div>
@@ -109,7 +120,10 @@
           <div class="w-50 pr-1">
             <div class="d-flex justify-between">
               <h3>Key client contact motivation</h3>
-              <button class="btn blue">ASSIST</button>
+              <button class="btn blue overlay-trigger" type="button" value="overlay-five">ASSIST</button>
+              <div class="overlay" id="overlay-five">
+                <iframe src="https://player.vimeo.com/video/809828912?h=8b6ef6b99d" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              </div>
             </div>
             <div class="lines">
               <div class="line long-line"></div>
@@ -128,7 +142,10 @@
           <div class="w-50 pl-1">
             <div class="d-flex justify-between">
               <h3>Meeting Goals</h3>
-              <button class="btn blue">ASSIST</button>
+              <button class="btn blue overlay-trigger" type="button" value="overlay-six">ASSIST</button>
+              <div class="overlay" id="overlay-six">
+                <iframe src="https://player.vimeo.com/video/809829523?h=2697782685" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              </div>
             </div>
             <div class="lines">
               <div class="line long-line"></div>
@@ -161,7 +178,10 @@
                 <div class="os-wrapper pr-1">
                   <div class="d-flex justify-between">
                     <h3>Opening Statement</h3>
-                    <button class="btn green">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-seven">ASSIST</button>
+                    <div class="overlay" id="overlay-seven">
+                      <iframe src="https://player.vimeo.com/video/809828968?h=893fdfde91" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                   </div>
                   <div class="lines">
                     <div class="line long-line"></div>
@@ -174,7 +194,10 @@
                 <div class="steps-wrapper pl-1">
                   <div class="d-flex justify-between">
                     <h3>Steps required in this meeting</h3>
-                    <button class="btn green">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-eight">ASSIST</button>
+                    <div class="overlay" id="overlay-eight">
+                      <iframe src="https://player.vimeo.com/video/809829574?h=0aeddc33e2" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                   </div>
                   <div class="lines">
                     <div class="line long-line"></div>
@@ -205,7 +228,10 @@
                 <div class="w-50 pr-1">
                   <div class="d-flex justify-between">
                     <h3>Ask (Top 3 questions)</h3>
-                    <button class="btn green">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-nine">ASSIST</button>
+                    <div class="overlay" id="overlay-nine">
+                      <iframe src="https://player.vimeo.com/video/809829612?h=ed0e500d9a" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                   </div>
                   <div class="lines">
                     <div class="line long-line"></div>
@@ -221,7 +247,10 @@
                 <div class="w-50 pl-1">
                   <div class="d-flex justify-between">
                     <h3>Tell (Top 3 data points to share)</h3>
-                    <button class="btn green">ASSIST</button>
+                    <button class="btn green overlay-trigger" type="button" value="overlay-ten">ASSIST</button>
+                    <div class="overlay" id="overlay-ten">
+                      <iframe src="https://player.vimeo.com/video/809829256?h=5287f15ad1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
                   </div>
                   <div class="lines">
                     <div class="line long-line"></div>
@@ -242,7 +271,10 @@
               <div class="w-100">
                 <div class="d-flex justify-between">
                   <h3>Draft proposal</h3>
-                  <button class="btn green">ASSIST</button>
+                  <button class="btn green overlay-trigger" type="button" value="overlay-eleven">ASSIST</button>
+                  <div class="overlay" id="overlay-eleven">
+                    <iframe src="https://player.vimeo.com/video/809829311?h=64e28b6732" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                  </div>
                 </div>
                 <div class="lines">
                   <div class="line long-line"></div>
@@ -260,7 +292,10 @@
               <div class="w-100">
                 <div class="d-flex justify-between">
                   <h3>Top 3 Objections</h3>
-                  <button class="btn green">ASSIST</button>
+                  <button class="btn green overlay-trigger" type="button" value="overlay-twelve">ASSIST</button>
+                  <div class="overlay" id="overlay-twelve">
+                    <iframe src="https://player.vimeo.com/video/809829340?h=8f3d43ec9b" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                  </div>
                 </div>
                 <div class="lines">
                   <div class="line long-line"></div>
