add helper text to account

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
           </div>
           <div class="d-flex justify-between">
             <div class="form-group d-flex items-center w-50 pr-1 special-flex">
-              <h4 class="relative mr-05">Account <span class="extra-space">&nbsp; &nbsp;</span> :<img src="./icons/i.svg" class="info-icon orange" alt=""></h4>
+              <h4 class="relative mr-05">Account <span class="extra-space relative"><img src="./icons/i.svg" class="info-icon orange" alt="">
+                <p class="helper-text">The high-level, medium to long term goal for this account, e.g., "Grow monthly revenue to $X by end of Q4". Each meeting should help Advance you towards this longer-term goal. This field is imported from the Account's Strategic Plan and is NOT editable from the Pre-Call Plan - it should be updated separately and only occasionally.</p></span> :<div>
+                
+              </div>
+            </h4>
+              <!-- <h4 class="relative mr-05">Account <span class="extra-space">&nbsp; &nbsp;</span> :<div>
+                <img src="./icons/i.svg" class="info-icon orange" alt="">
+                <p class="helper-text">The high-level, medium to long term goal for this account, e.g., "Grow monthly revenue to $X by end of Q4". Each meeting should help Advance you towards this longer-term goal. This field is imported from the Account's Strategic Plan and is NOT editable from the Pre-Call Plan - it should be updated separately and only occasionally.</p>
+              </div>
+            </h4> -->
               <input type="text" name="account" id="account">
             </div>
             <div class="form-group d-flex items-center justify-between w-50 pl-1 special-flex">
