arange generate pdf btn on the page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="wrapper">
+  <main class="wrapper">
     <div class="d-flex justify-between items-center">
       <div class="page-title-wrapper">
         <img class="swift-logo" src="https://swaggerdemo.file.force.com/servlet/servlet.ImageServer?id=0155e000001wbZt&oid=00D5e000004gC8f&lastMod=1648816309000" alt="Swift Logo">
@@ -425,19 +425,10 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="pcp-section purple-section">
-      <div class="section-title">
-        <h2>ReviewS</h2>
-      </div>
-      <div class="section-content">
-
-      </div>
-    </section> -->
-    <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn"/>
-    <!-- <button class="btn" id="printButton" onclick="print()">Generate PDF</button>  -->
-
+    </main>
+    <div class="generate-wrapper">
+      <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn"/>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
