add some contact details in the footer

--- a/index.html
+++ b/index.html
@@ -428,12 +428,20 @@
     </div>
       
       <div class="generate-wrapper">
-        <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn"/>
+        <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn grey"/>
+      </div>
+      <div class="wrapper">
+        
       </div>
     </main>
     <footer>
-        <p>This form including layout and design is copyright © 2020-2022 Swagger Sales.<br>
+      <div>
+        <h6 class="mb-1">If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
+
+        </h6> 
+        <p>This form including layout and design is copyright © 2020-2023 Swagger Sales North America LLC<br>
           All rights reserved foreign and domestic.</p>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
