fix the name of the company

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <h6 class="mb-1">If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
 
         </h6> 
-        <p>This form including layout and design is copyright © 2020-2023 Swagger Sales North America LLC<br>
+        <p>This form including layout and design is copyright © 2020-2023 Swift Sales Applications Inc.<br>
           All rights reserved foreign and domestic.</p>
       </div>
     </footer>
