--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             </div>
             <div class="d-flex justify-between">
               <div class="form-group d-flex items-center w-50 pr-1 special-flex">
-                <h4 class="relative mr-05">Account <span class="extra-space relative"><img src="./icons/i-orange.svg" class="info-icon orange" alt="More info icon">
-                  <p class="helper-text short">The high-level goal for this account.</p></span>:
+                <h4 class="relative mr-05">Account 
+                  <!-- <span class="extra-space relative">
+                    <img src="./icons/i-orange.svg" class="info-icon orange" alt="More info icon">
+                    <p class="helper-text short">The high-level goal for this account.</p></span>: --> :
                 </h4>
                 <input type="text" name="account" id="account">
               </div>
@@ -61,12 +63,12 @@
                 <input type="date" id="meeting-date" name="meeting-date" onfocus="this.showPicker()">
               </div>
             </div>
-            <div class="form-group d-flex items-center justify-between mb-1 special-flex w-100">
+            <div class="form-group d-flex items-center justify-between mb-1 special-flex items-start w-100">
               <h4 class="relative mr-05">Strategic Objective 
                 <span class="extra-space relative"><img src="./icons/i-orange.svg" class="info-icon orange" alt="More info icon">
                 <p class="helper-text">The high-level, medium to long term goal for this account, e.g., "Grow monthly revenue to $X by end of Q4". Each meeting should help Advance you towards this longer-term goal. This field is imported from the Account's Strategic Plan and is NOT editable from the Pre-Call Plan - it should be updated separately and only occasionally.</p></span>:
               </h4>
-              <input type="text" name="strategic-objective" id="strategic-objective">
+              <textarea name="strategic-objective" id="strategic-objective" maxlength="255" placeholder="The high-level goal for this account"></textarea>
             </div>
 
             <div class="d-flex justify-between">
@@ -277,7 +279,7 @@
                   <div class="w-100 d-flex justify-between">
                     <div class="discover-heading">
                       <div class="d-flex justify-between">
-                        <h3>Ask (Top 3 questions)
+                        <h3>Ask (Top 3)
                           <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                             <p class="helper-text">Prioritize and distill the three most important questions to ask in this meeting. Focus on areas of leverage, where you can create and monetize value for the Client.</p></span>:
                           </h3>
@@ -293,7 +295,7 @@
                     </div>
                     <div class="discover-heading">
                       <div class="d-flex justify-between">
-                        <h3>Tell (Top 3 data points to share)
+                        <h3>Tell (Top 3e)
                           <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                             <p class="helper-text">Prioritize and distill no more than 3 concise items of information or data to share with the Client in this meeting. Focus on information that gives you credibility /leverage and/or that manages Client expectations.</p></span>:
                           </h3>
@@ -311,16 +313,16 @@
 
                   <div class="form-group">
                     <div class="discver-row d-flex justify-between w-100 mb-1">
-                      <textarea name="q1" id="q1" placeholder="Question 1"></textarea>
-                      <textarea name="info-data1" id="info-data1" placeholder="Info or data to share 1"></textarea>
+                      <textarea name="q1" id="q1" placeholder="Question 1" maxlength="255"></textarea>
+                      <textarea name="info-data1" id="info-data1" placeholder="Info or data to share 1" maxlength="255"></textarea>
                     </div>
                     <div class="discver-row d-flex justify-between w-100 mb-1">
-                      <textarea name="q2" id="q2" placeholder="Question 2"></textarea>
-                      <textarea name="info-data2" id="info-data2" placeholder="Info or data to share 1"></textarea>
+                      <textarea name="q2" id="q2" placeholder="Question 2" maxlength="255"></textarea>
+                      <textarea name="info-data2" id="info-data2" placeholder="Info or data to share 1" maxlength="255"></textarea>
                     </div>
                     <div class="discver-row d-flex justify-between w-100">
-                      <textarea name="q3" id="q3" placeholder="Question 3"></textarea>
-                      <textarea name="info-data3" id="info-data3" placeholder="Info or data to share 3"></textarea>
+                      <textarea name="q3" id="q3" placeholder="Question 3" maxlength="255"></textarea>
+                      <textarea name="info-data3" id="info-data3" placeholder="Info or data to share 3" maxlength="255"></textarea>
                     </div>
                   </div>
               </div>
@@ -345,7 +347,7 @@
                     <div class="line short-line"></div>
                   </div>
                   <div class="form-group">
-                    <textarea name="draft-proposal" id="draft-proposal" class="w-100" placeholder="If you agree to XXX then we would agree to YYY. (Engage as an equal – proposals should require a commitment or action from both parties)"></textarea>
+                    <textarea name="draft-proposal" id="draft-proposal" class="w-100" placeholder="If you agree to XXX then we would agree to YYY. (Engage as an equal – proposals should require a commitment or action from both parties)" maxlength="255"></textarea>
                   </div>
                 </div>
               </div>
@@ -369,7 +371,6 @@
                     <div class="line short-line"></div>
                   </div>
                   <div class="form-group">
-
                     <div class="objection-row d-flex w-100">
                       <h4 class="objection-heading">Objection</h4>
                       <h4 class="strategy-heading">Strategy</h4>
