make the pdf look nicer

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                       <div class="line long-line"></div>
                       <div class="line short-line"></div>
                     </div>
-                    <div class="form-group special-flex">
+                    <div class="checkboxes-wrapper form-group special-flex">
                       <label class="container">Discover
                         <input type="checkbox">
                         <span class="checkmark"></span>
@@ -295,7 +295,7 @@
                     </div>
                     <div class="discover-heading">
                       <div class="d-flex justify-between">
-                        <h3>Tell (Top 3e)
+                        <h3>Tell (Top 3)
                           <span class="extra-space relative"><img src="./icons/i-green.svg" class="info-icon green" alt="More info icon">
                             <p class="helper-text">Prioritize and distill no more than 3 concise items of information or data to share with the Client in this meeting. Focus on information that gives you credibility /leverage and/or that manages Client expectations.</p></span>:
                           </h3>
