fixes on PDF look, tried to fix footer tat the bottom of the last page but i couln't make it look good

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h4 class="relative mr-05">Account 
                   <!-- <span class="extra-space relative">
                     <img src="./icons/i-orange.svg" class="info-icon orange" alt="More info icon">
-                    <p class="helper-text short">The high-level goal for this account.</p></span>: --> :
+                    <p class="helper-text short">The high-level goal for this account.</p></span>: -->: 
                 </h4>
                 <input type="text" name="account" id="account">
               </div>
@@ -438,9 +438,9 @@
     </main>
     <footer>
       <div>
-        <h6 class="mb-1">If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
-
-        </h6> 
+        <p class="mb-05"><strong>If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
+        </strong>
+        </p>
         <p>This form including layout and design is copyright © 2020-2023 Swift Sales Applications Inc.<br>
           All rights reserved foreign and domestic.</p>
       </div>
