--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <input type="button" value="Generate PDF" onclick="GeneratePdf()" class="btn grey"/>
     </div>
     </main>
-    <footer>
+    <div class="bottom">
       <div>
         <p class="mb-05"><strong>If you have any questions or suggestions, please feel free to email us directly at <a href="mailto:someone@@swaggersales.com">someone@@swaggersales.com</a>. <br> We're always happy to help
         </strong>
@@ -444,7 +444,7 @@
         <p>This form including layout and design is copyright © 2020-2023 Swift Sales Applications Inc.<br>
           All rights reserved foreign and domestic.</p>
       </div>
-    </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
